--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
         <configuration>
           <argLine>
             -Djunit.jupiter.displayname.generator.default=com.merikan.testcontainers.todo.test.ReplaceCamelCaseAndUnderScores
