--- a/solution/src/main/resources/application-development.yml
+++ b/solution/src/main/resources/application-development.yml
@@ -1,9 +1,12 @@
 # settings to be used when running in local dev environment 
 
+app:
+  db:
+    host: localhost
+    port: 13306
+    database: todo-db
+    user: todo-user
+    password: todo-password
+
 logging.level.com.merikan: debug
-spring:
-  datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS "public";Mode=MySQL;
-    driver-class-name: org.h2.Driver
-    user: sa
-    password: ''
+
