--- a/solution/src/main/resources/application.yml
+++ b/solution/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+app:
+  db:
+    host:
+    port: 3306
+    user:
+    password:
+    database:
+
 spring:
   main:
     banner-mode: "off"
@@ -8,10 +16,23 @@ spring:
       write_dates_as_timestamps: false
     default-property-inclusion: non_null
     date-format: "yyyy-MM-dd'T'HH:mm:ss.SSS"
-  jpa:
-    open-in-view: false
   datasource:
-    url: jdbc:mariadb://localhost:3306/todo_db?useUnicode=true&characterEncoding=UTF-8&useMysqlMetadata=true
-    username: dbuser
-    password: dbpassword
+    url: jdbc:mariadb://${app.db.host}:${app.db.port}/${app.db.database}?useUnicode=true&characterEncoding=UTF-8&useMysqlMetadata=true
+    username: ${app.db.user}
+    password: ${app.db.password}
+    driver-class-name: org.mariadb.jdbc.Driver
+    hikari:
+      auto-commit: false
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: validate
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+    open-in-view: false
+    properties:
+      hibernate:
+        jdbc:
+          batch_size: 20
+          order_inserts: true
 
