--- a/origin/pom.xml
+++ b/origin/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.merikan.testcontainers</groupId>
   <artifactId>todo-origin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name>todo</name>
+  <name>${project.artifactId}</name>
   <description>Testcontainers with Spring Boot and Junit 5</description>
 
   <properties>
