--- a/faster/pom.xml
+++ b/faster/pom.xml
@@ -106,6 +106,11 @@
       <artifactId>mariadb</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>kafka</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
