--- a/solution/pom.xml
+++ b/solution/pom.xml
@@ -16,7 +16,7 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <testcontainers.version>1.15.0-rc2</testcontainers.version>
+    <testcontainers.version>1.16.3</testcontainers.version>
   </properties>
 
   <dependencyManagement>
